# IBVS_Teleoperation_UR

./: .gitignore  AGENTS.md  CMakeLists.txt  SYSTEM_ARCHITECTURE.md  USER_GUIDE.md
.trae/documents/: YOLO 检测器测试程序设计.md
else/: 1111.cpp  IBVS_teleoperation_d405.cpp  IBVS_teleoperation_d405_refactored.cpp
include/: AppConfig.h  RobotTeleoperation.h  SystemController.h  TensorRT_detection.h
src/: CMakeLists.txt  RobotTeleoperation.cpp  SystemController.cpp  TensorRT_detection.cpp  TensorRT_detection.h  main.cpp
test/: CMakeLists.txt  TEST_INSTRUCTIONS.md  run_test.sh  test_yolo_detector.cpp
